Bug 479282 - Refine "mac" theme
Refine the "mac" theme to improve consistency with other OSX applications:

- Use light grey for the main toolbar
- Use an alternative dragHandle image with smaller dots
- Hide the dark black outline the sometimes appears below toolbars

--- a/bundles/org.eclipse.ui.themes/css/e4_default_mac.css
+++ b/bundles/org.eclipse.ui.themes/css/e4_default_mac.css
@@ -31,6 +31,16 @@ ColorDefinition#org-eclipse-ui-workbench-ACTIVE_TAB_OUTER_KEYLINE_COLOR {
 .MPartStack {
 	swt-simple: false;
 	swt-mru-visible: false;
+	swt-unselected-tabs-color: #E8E8E8 #FFFFFF 100%;
+	swt-outer-keyline-color: #FFFFFF;
+	swt-inner-keyline-color: #FFFFFF;
+	swt-tab-outline: #B6BCCC;
+}
+
+.MPartStack.active {
+	swt-tab-outline: #B6BCCC;
+	swt-shadow-visible: false;
+	swt-outer-keyline-color: #C4C5C1;
 }
 
 .MTrimBar {
@@ -38,22 +48,37 @@ ColorDefinition#org-eclipse-ui-workbench-ACTIVE_TAB_OUTER_KEYLINE_COLOR {
 }
 
 .MTrimBar#org-eclipse-ui-main-toolbar {
-	background-color:  #CFCFCF #A8A8A8 100%;
+	background-color: #F0F0F0 #E8E8E8 100%;
 }
 
 .MToolControl.TrimStack {
-	frame-image:  url(./macTSFrame.png);
-	handle-image:  url(./macHandle.png);
+	frame-image: url(./macTSFrame.png);
+	handle-image: url(./macHandle.png);
+	frame-cuts: 5px 1px 5px 16px;
+}
+
+.MToolBar.Draggable {
+	handle-image: url(./macHandle.png);
+}
+
+.MTrimmedWindow {
+	background-color: #E8E8E8;
 }
 
 #PerspectiveSwitcher {
 	background-color: #F0F0F0 #E8E8E8 100%;
-	eclipse-perspective-keyline-color: #515151 #515151;
+	eclipse-perspective-keyline-color: #ECE9D8 #E8E8E8;
+	handle-image: url(./macHandle.png);
 }
 
 #org-eclipse-ui-editorss {
 	swt-tab-height: 8px;
 	padding: 0px 5px 7px;
+	swt-unselected-tabs-color: #D6DDE5 #D6DDE5 #D6DDE5 100% 100%;
+	swt-outer-keyline-color: #D6DDE5;
+	swt-inner-keyline-color: #D6DDE5;
+	swt-tab-outline: #D6DDE5;
+	color: #D6DDE5;
 }
 
 CTabFolder.MArea .MPartStack, CTabFolder.MArea .MPartStack.active {
@@ -61,5 +86,5 @@ CTabFolder.MArea .MPartStack, CTabFolder.MArea .MPartStack.active {
 }
 
 CTabFolder Canvas {
-	background-color: #F0F0F0;
+	background-color: #FFFFFF;
 }
